[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Cloudscape Contributors"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
yew = { version = "0.22", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "MouseEvent",
    "KeyboardEvent",
    "FocusEvent",
    "EventTarget",
    "Window",
    "Navigator",
    "Clipboard",
] }
gloo = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
