[package]
name = "cloudscape-demo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.22", features = ["csr"] }
cloudscape-components = { path = "../crates/components" }
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "MouseEvent",
    "KeyboardEvent",
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Storage",
] }
wasm-bindgen = "0.2"
gloo = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
