[package]
name = "cloudscape-components"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
gloo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cloudscape-design-tokens = { path = "../design-tokens" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

